[gd_scene load_steps=12 format=3 uid="uid://b6e5bqofwh1sc"]

[ext_resource type="Texture2D" uid="uid://nfh4rj3rqb8c" path="res://icon.svg" id="1_1ykrc"]
[ext_resource type="Script" uid="uid://bulkpameiji2v" path="res://levels/prototype_level.gd" id="1_6lfjr"]
[ext_resource type="PackedScene" uid="uid://hmwovwxii41u" path="res://chars/player/player.tscn" id="2_ycx7s"]
[ext_resource type="PackedScene" uid="uid://du2f51txplfil" path="res://chars/enemies/simple_shooter_enemy/simple_shooter_enemy.tscn" id="3_htrvu"]
[ext_resource type="PackedScene" uid="uid://mh03mrxd1mcf" path="res://assets/env/prototype/wall_tile_plane.blend" id="3_qd0o6"]
[ext_resource type="PackedScene" uid="uid://duyy4e4c8tjdi" path="res://assets/env/prototype/slope_45d.blend" id="6_i5e4g"]

[sub_resource type="Environment" id="Environment_qgtqi"]
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/3 = 10.0
glow_levels/4 = 1.0
glow_levels/5 = 15.0
glow_levels/6 = 1.0
glow_levels/7 = 1.0
fog_light_color = Color(0.43663383, 0.5283297, 0.6559346, 1)
fog_sun_scatter = 100.0

[sub_resource type="NavigationMesh" id="NavigationMesh_qd0o6"]
vertices = PackedVector3Array(-23.25, 0.5, -16, -20.5, 0.5, -16, -20.25, 0.5, -16.75, -23.25, 0.5, -23.25, 20.5, 0.5, -16.75, 20.75, 0.5, -14.5, 23.25, 0.5, -14.5, 23.25, 0.5, -23.25, -3.5, 0.5, -8.75, -3.25, 0.5, -8, -0.75, 0.5, -8, -0.75, 0.5, -15.25, -23.25, 0.5, -8, -20.5, 0.5, -8, -20.25, 0.5, -8.75, -20.25, 0.5, -15.25, 7.25, 0.5, -12.25, 8, 0.5, -12.5, 8, 0.5, -15.25, 0.75, 0.5, -15.25, 0.75, 0.5, 0.25, 2, 0.5, 3.5, 2.75, 0.5, 4, 7.25, 0.5, 4, 8.75, 0.5, -12.25, 13.25, 0.5, -12.25, 14, 0.5, -12.5, 14, 0.5, -15.25, 8.75, 0.5, 4.25, 13.25, 0.5, 4.25, 14.75, 0.5, -12.25, 19.25, 0.5, -15.25, 14.75, 0.5, 16.25, 19.25, 0.5, 16.25, 20.75, 0.5, 14.5, 23.25, 0.5, 14.5, -3.5, 0.5, -7.25, -3.5, 0.5, -0.75, -3.25, 0.5, 0, -0.75, 0.5, 0, -20.25, 0.5, -0.75, -20.25, 0.5, -7.25, -23.25, 0.5, 0, -20.5, 0.5, 0, -20.25, 0.5, 0.75, -23.25, 0.5, 7.25, -2.5, 0.5, 7.25, -2.5, 0.5, 3.75, -3.75, 0.5, 0.75, -0.5, 0.5, 0.75, -1.5, 0.75, 3.75, 0.5, 0.5, 0.75, 1.5, 0.75, 3.75, -1.5, 4.25, 15.25, 1.75, 4.5, 15.75, -1.5, 4.5, 8.0625, 1.583334, 4.5, 7.75, -1.5, -3, 0, -1.5, -2.5, 0.5, 1.5, -2.5, 0.5, 1.5, -3, 0, 8.5, 0.5, 4.75, 8.5, 0.5, 7.25, 8.75, 0.5, 8, 13.25, 0.5, 8, 7.5, 0.5, 4.75, 2.75, 0.5, 7.25, -1.25, 0.5, 6, -1.25, 0.5, 7, 1.5, 0.5, 7, 1.5, 0.5, 6, 8.5, 0.5, 8.75, 8.5, 0.5, 15.25, 8.75, 0.5, 16, 13.25, 0.5, 16, 6.5, 0.5, 8.75, 6.5, 0.5, 15.25, -16, 0.5, 23.25, -16, 0.5, 20.75, -16.75, 0.5, 20.5, -23.25, 0.5, 23.25, -16.75, 0.5, 11.75, -16, 0.5, 11.5, -16, 0.5, 8.75, -23.25, 0.5, 8.75, -8.75, 0.5, 20.5, -15.25, 0.5, 20.5, -8, 0.5, 23.25, -8, 0.5, 20.75, -15.25, 0.5, 11.75, -8.75, 0.5, 11.75, -8, 0.5, 11.5, -8, 0.5, 8.75, -7.25, 0.5, 11.75, -0.25, 0.5, 15.25, 1.75, 0.5, 15.25, 1.75, 0.5, 8.75, -7.25, 0.5, 16, -0.5, 0.5, 16, 14.75, 0.5, 20.5, 14, 0.5, 20.75, 14, 0.5, 23.25, 20.75, 0.5, 16.5, 23.25, 0.5, 23.25, 19.5, 0.5, 16.75, -7.25, 0.5, 20.5, 1.75, 0.5, 23.25, 1.75, 0.5, 16.75, -0.25, 0.5, 16.75, 13.25, 0.5, 20.5, 8.5, 0.5, 16.75, 6.5, 0.5, 16.75, 6.5, 0.5, 23.25)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(5, 4, 6), PackedInt32Array(6, 4, 7), PackedInt32Array(4, 2, 7), PackedInt32Array(7, 2, 3), PackedInt32Array(9, 8, 10), PackedInt32Array(10, 8, 11), PackedInt32Array(1, 15, 0), PackedInt32Array(0, 15, 14), PackedInt32Array(0, 14, 13), PackedInt32Array(0, 13, 12), PackedInt32Array(14, 15, 8), PackedInt32Array(8, 15, 11), PackedInt32Array(17, 16, 18), PackedInt32Array(18, 16, 19), PackedInt32Array(21, 20, 22), PackedInt32Array(22, 20, 23), PackedInt32Array(23, 20, 16), PackedInt32Array(16, 20, 19), PackedInt32Array(17, 18, 24), PackedInt32Array(24, 18, 25), PackedInt32Array(25, 18, 26), PackedInt32Array(26, 18, 27), PackedInt32Array(25, 29, 24), PackedInt32Array(24, 29, 28), PackedInt32Array(26, 27, 30), PackedInt32Array(30, 27, 31), PackedInt32Array(32, 30, 33), PackedInt32Array(33, 30, 31), PackedInt32Array(5, 6, 34), PackedInt32Array(34, 6, 35), PackedInt32Array(9, 10, 36), PackedInt32Array(36, 10, 37), PackedInt32Array(37, 10, 38), PackedInt32Array(38, 10, 39), PackedInt32Array(41, 36, 40), PackedInt32Array(40, 36, 37), PackedInt32Array(13, 41, 12), PackedInt32Array(12, 41, 40), PackedInt32Array(12, 40, 43), PackedInt32Array(12, 43, 42), PackedInt32Array(43, 44, 42), PackedInt32Array(42, 44, 45), PackedInt32Array(47, 46, 48), PackedInt32Array(48, 46, 44), PackedInt32Array(44, 46, 45), PackedInt32Array(39, 49, 38), PackedInt32Array(38, 49, 48), PackedInt32Array(48, 49, 47), PackedInt32Array(47, 49, 50), PackedInt32Array(51, 20, 21), PackedInt32Array(21, 52, 51), PackedInt32Array(51, 52, 49), PackedInt32Array(49, 52, 50), PackedInt32Array(52, 56, 50), PackedInt32Array(50, 56, 55), PackedInt32Array(55, 56, 53), PackedInt32Array(53, 56, 54), PackedInt32Array(60, 59, 57), PackedInt32Array(57, 59, 58), PackedInt32Array(61, 28, 62), PackedInt32Array(62, 28, 63), PackedInt32Array(63, 28, 29), PackedInt32Array(63, 29, 64), PackedInt32Array(22, 23, 65), PackedInt32Array(62, 65, 61), PackedInt32Array(22, 65, 66), PackedInt32Array(66, 65, 62), PackedInt32Array(70, 69, 67), PackedInt32Array(67, 69, 68), PackedInt32Array(63, 64, 71), PackedInt32Array(71, 64, 72), PackedInt32Array(72, 64, 73), PackedInt32Array(73, 64, 74), PackedInt32Array(71, 72, 75), PackedInt32Array(75, 72, 76), PackedInt32Array(78, 77, 79), PackedInt32Array(79, 77, 80), PackedInt32Array(82, 81, 83), PackedInt32Array(83, 81, 84), PackedInt32Array(79, 80, 81), PackedInt32Array(81, 80, 84), PackedInt32Array(88, 87, 85), PackedInt32Array(85, 87, 86), PackedInt32Array(86, 87, 78), PackedInt32Array(78, 87, 77), PackedInt32Array(90, 85, 89), PackedInt32Array(89, 85, 86), PackedInt32Array(82, 83, 89), PackedInt32Array(89, 83, 90), PackedInt32Array(90, 83, 91), PackedInt32Array(91, 83, 92), PackedInt32Array(92, 93, 91), PackedInt32Array(95, 94, 96), PackedInt32Array(96, 94, 93), PackedInt32Array(96, 93, 92), PackedInt32Array(98, 97, 94), PackedInt32Array(94, 97, 93), PackedInt32Array(96, 75, 95), PackedInt32Array(95, 75, 76), PackedInt32Array(101, 100, 99), PackedInt32Array(34, 35, 102), PackedInt32Array(102, 35, 103), PackedInt32Array(33, 104, 32), PackedInt32Array(32, 104, 99), PackedInt32Array(104, 102, 99), PackedInt32Array(99, 102, 101), PackedInt32Array(101, 102, 103), PackedInt32Array(87, 88, 105), PackedInt32Array(107, 106, 108), PackedInt32Array(108, 106, 105), PackedInt32Array(105, 106, 87), PackedInt32Array(98, 108, 97), PackedInt32Array(97, 108, 105), PackedInt32Array(109, 100, 101), PackedInt32Array(73, 74, 110), PackedInt32Array(110, 74, 109), PackedInt32Array(111, 110, 112), PackedInt32Array(112, 110, 109), PackedInt32Array(112, 109, 101), PackedInt32Array(107, 111, 106), PackedInt32Array(106, 111, 112)]
agent_max_slope = 50.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i5e4g"]
albedo_texture = ExtResource("1_1ykrc")

[sub_resource type="PlaneMesh" id="PlaneMesh_htrvu"]
material = SubResource("StandardMaterial3D_i5e4g")
size = Vector2(50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_6lfjr"]
size = Vector3(50, 1, 50)

[node name="PrototypeLevel" type="Node3D"]
process_mode = 1
script = ExtResource("1_6lfjr")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qgtqi")

[node name="Player" parent="." instance=ExtResource("2_ycx7s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9653931, 0.7856362, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.80413485, 0.37910295, -0.4578735, 0.16389333, 0.5990069, 0.78379196, 0.57140726, -0.7053168, 0.41954985, -1.9487116, 5.2104697, 6.6427827)
shadow_enabled = true

[node name="Projectiles" type="Node" parent="."]

[node name="SimpleShooterEnemy" parent="." instance=ExtResource("3_htrvu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6354656, 0)

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="P00" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.97475, 0, 0)

[node name="P01" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.207232, 0, 18.996988)

[node name="P02" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 18.34573)

[node name="P03" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.291897, 0, 20.64247)

[node name="P04" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.310377, 0, 3.3451452)

[node name="P05" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.632723, 0, -20.488998)

[node name="P06" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.66799, 0, -19.5754)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_qd0o6")

[node name="Floor" type="StaticBody3D" parent="NavigationRegion3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Floor"]
mesh = SubResource("PlaneMesh_htrvu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_6lfjr")

[node name="wall_tile_plane" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -16)

[node name="wall_tile_plane11" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(-3.496911e-07, 0, 1, 0, 1, 0, -8, 0, -4.371139e-08, 14, 2, 4)

[node name="wall_tile_plane12" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(-3.496911e-07, 0, 1, 0, 1, 0, -8, 0, -4.371139e-08, 20, 2, 0)

[node name="wall_tile_plane6" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(4, 0, 0, 0, 1, 0, 0, 0, 1, -12, 2, -8)

[node name="wall_tile_plane8" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(4, 0, 0, 0, 1, 0, 0, 0, 1, -12, 2, 0)

[node name="wall_tile_plane9" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(8, 0, 0, 0, 1, 0, 0, 0, 1, -8, 2, 8)

[node name="wall_tile_plane13" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(-8.742278e-08, 0, 1, 0, 1, 0, -2, 0, -4.371139e-08, -8, 2, 16)

[node name="wall_tile_plane15" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(-8.742278e-08, 0, 1, 0, 1, 0, -2, 0, -4.371139e-08, -16, 2, 16)

[node name="wall_tile_plane14" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2, 16)

[node name="wall_tile_plane16" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(-8.742278e-08, 1, -4.371139e-08, 0, -4.371139e-08, -1, -2, -4.371139e-08, 1.9106855e-15, 0, 3.8, 12)

[node name="wall_tile_plane7" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(-1.7484555e-07, 0, 1, 0, 1, 0, -4, 0, -4.371139e-08, 0, 2, -8)

[node name="wall_tile_plane10" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(-1.7484555e-07, 0, 1, 0, 1, 0, -4, 0, -4.371139e-08, 8, 2, -4)

[node name="wall_tile_plane2" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(12, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -24)

[node name="wall_tile_plane3" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(12, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 24)

[node name="wall_tile_plane4" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(-5.2453663e-07, 0, 1, 0, 1, 0, -12, 0, -4.371139e-08, -24, 2, 0)

[node name="wall_tile_plane5" parent="NavigationRegion3D" instance=ExtResource("3_qd0o6")]
transform = Transform3D(-5.2453663e-07, 0, 1, 0, 1, 0, -12, 0, -4.371139e-08, 24, 2, 0)

[node name="slope_45d" parent="NavigationRegion3D" instance=ExtResource("6_i5e4g")]
transform = Transform3D(2, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 3.8)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
